[project]
name = "bbo-experiment"
version = "0.1.0"
description = ""
authors = [{ name = "wniec", email = "niecwladek@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "numpy==1.26.4",
    "pypop7==0.0.82",
    "coco-experiment>=2.8.1,<3",
    "cocopp>=2.7.4,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["bbo_experiment"]
